# counterfeitBC

./: README.md
backend/: Cargo.toml
backend/backend/: settings.py
backend/src/: lib.rs  manufacturer.rs
backend/src/proto/: counterfeit.proto  mod.rs
blockchain_node/: Cargo.toml  README.MD  build.rs
blockchain_node/src/: api.rs  lib.rs  main.rs  manufacturer.rs  owner.rs  product.rs  schema.rs  transactions.rs
blockchain_node/src/proto/: counterfeit.proto
frontend/admin-app/: package-lock.json  package.json
frontend/admin-app/public/: index.html
frontend/admin-app/src/: App.tsx  apiConfig.ts  index.scss  index.tsx
frontend/admin-app/src/components/ItemCard/: ItemCard.module.scss  ItemCard.tsx
frontend/admin-app/src/components/PageSpinner/: PageSpinner.module.scss  PageSpinner.tsx
frontend/admin-app/src/components/ProductCard/: ProductCard.tsx
frontend/admin-app/src/components/ProductView/: ProductView.module.scss  ProductView.tsx
frontend/admin-app/src/components/ProgressSpinner/: ProgressSpinner.module.scss  ProgressSpinner.tsx
frontend/admin-app/src/components/TemplateCard/: Templatecard.tsx  templateCardModalConfig.ts
frontend/admin-app/src/components/TemplateDialog/: TemplateDialog.tsx  templateModalConfig.ts
frontend/admin-app/src/components/TemplateView/: TemplateView.module.scss  TemplateView.tsx
frontend/admin-app/src/models/: index.ts  product.ts  template.ts  user.ts
frontend/admin-app/src/pages/LoginPage/: LoginPage.module.scss  LoginPage.tsx
frontend/admin-app/src/pages/ProductPage/: ProductPage.module.scss  ProductPage.tsx
frontend/admin-app/src/pages/ProductsPage/: ProductsPage.module.scss  ProductsPage.tsx
frontend/admin-app/src/pages/ProfilePage/: ProfilePage.tsx
frontend/admin-app/src/pages/PublicProductPage/: PublicProductPage.module.scss  PublicProductPage.tsx
frontend/admin-app/src/pages/SignUpPage/: SignUpPage.module.scss  SignUpPage.tsx
frontend/admin-app/src/pages/TeamPage/: TeamPage.tsx
frontend/admin-app/src/services/: README.md  identityService.ts  index.ts  productsService.ts  templatesService.ts
frontend/admin-app/src/store/: index.ts
frontend/admin-app/src/utils/: callApi.ts
frontend/nfc-recorder/: ionic.config.json  package-lock.json  package.json
(+26 files in other folders)
