[package]
name = "counterfeitBC"
version = "0.1.0"
authors = ["Arsenii Temnik"]
edition = "2020"

[dependencies]
exonum = { version = "0.12.0" }
exonum-derive = { version = "0.12.0" }
exonum-configuration = { version = "0.12.0" }
exonum-merkledb = { version = "0.12.0" }
exonum-crypto = { version = "0.12.0"}
serde = "1.0.10"
serde_derive = "1.0.10"
failure = "0.1.5"
protobuf = "2.8.0"

[dev-dependencies]
exonum-testkit = { version = "0.12.0" }
serde_json = "1.0.0"
pretty_assertions = "0.5.1"

[build-dependencies]
exonum-build = { version = "0.12.0" }

[features]
default = ["with-serde"]
with-serde = []

