[package]
name = "counterfeitBC"
version = "0.1.0"
authors = ["Arsenii Temnik"]
edition = "2018"

[dependencies]
exonum = "1.0.0"
exonum-crypto = "1.0.0"
exonum-derive = "1.0.0"
exonum-proto = "1.0.0"
exonum-rust-runtime = "1.0.0"
exonum-merkledb = "1.0.0"
exonum-cli = "1.0.0-rc.1"

anyhow = "1.0.26"
protobuf = "2.8.0"
serde = "1.0.0"
serde_derive = "1.0.0"
failure = "0.1.5"
serde_json = "1.0"

[dependencies.tokio]
version = "0.2.13"
features = ["blocking", "dns", "io-util", "macros", "rt-threaded", "tcp", "time"]

[build-dependencies]
exonum-build = "1.0.0"

[features]
default = ["with-serde"]
with-serde = []
